# twyk

./: .dockerignore  .gitignore
picture-frame/: .env.development  .env.production  .env.staging  Dockerfile.cross  index.html  manager.sh  package-lock.json  package.json
picture-frame/app/src-tauri/src/: musing.rs
picture-frame/orc/: Cargo.toml
picture-frame/orc/src/: main.rs
picture-frame/src/: App.css  App.tsx  ConfigProvider.tsx  MemorySlide.css  MemorySlide.tsx  MusingSlide.tsx  Picture.css  Picture.tsx  Slideshow.css  Slideshow.tsx  Text.css  Text.tsx  Video.css  Video.tsx  config.ts  main.tsx  models.ts  service.ts  vite-env.d.ts
picture-frame/src-tauri/: Cargo.toml  staging.conf.json  tauri.conf.json
picture-frame/src-tauri/icons/: icon.icns
picture-frame/src-tauri/src/: main.rs  memory.rs  musing.rs
picture-frame/web-server/src/: main.rs
picture-frame/web-ui/src/: App.tsx  api.ts
