[package]
name = "twyk"
version = "0.0.6"
description = "A slideshow supporting pictures, videos, and text."
authors = ["Yaneury Fermin <hello@yaneury.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "http-all", "fs-read-file", "shell-open", "path-all", "protocol-asset", "fs-read-dir"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1.1"
log = "0.4.21"
serde_yaml = "0.9.34"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
